# serpinsky_cemetery

./: .gitignore  CMakeLists.txt  README.md
res/: fragment_shader.txt  vertex_shader.txt
src/: main.cpp
src/App/: App.cpp  App.h
src/Exception/: Exception.cpp  Exception.h
src/Math/: Geometry.cpp  Geometry.hpp  SerpinskyCemetery.cpp  SerpinskyCemetery.h  Square.cpp  Square.h  TSquareFractal.cpp  TSquareFractal.h
src/Renderer/: Image.cpp  Image.h  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  Texture2D.cpp  Texture2D.h
src/ResourceManager/: ResourceManager.cpp  ResourceManager.h
src/Resource_manager/: ResourceManager.h
